--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -22,19 +22,24 @@ ShowcaseScreen:
         orientation: 'horizontal' if tbh.state == 'down' else 'vertical'
 
         AccordionItem:
-            title: 'Panel 1'
+            title: 'Musicas'
             Label:
                 text: 'This is a label fit to the content view'
                 text_size: self.width, None
 
         AccordionItem:
-            title: 'Panel 2'
+            title: 'Video'
             Video:
                 source:'ctrl_video2.mp4'
                 state:'play'
                 options:{'eos': 'loop'}
 
-
+        AccordionItem:
+            title: 'Musicas'
+            Label:
+                text: 'This is a label fit to the content view'
+                text_size: self.width, None
+                
         AccordionItem:
             title: 'Panel 3'
             Label:
