--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -22,12 +22,6 @@ ShowcaseScreen:
         orientation: 'horizontal' if tbh.state == 'down' else 'vertical'
 
         AccordionItem:
-            title: 'Musicas'
-            Label:
-                text: 'This is a label fit to the content view'
-                text_size: self.width, None
-
-        AccordionItem:
             title: 'Video'
             Video:
                 source:'ctrl_video2.mp4'
@@ -39,9 +33,9 @@ ShowcaseScreen:
             Label:
                 text: 'This is a label fit to the content view'
                 text_size: self.width, None
-                
+
         AccordionItem:
-            title: 'Panel 3'
+            title: 'Radio'
             Label:
                 text: 'This is a label fit to the content view'
                 text_size: self.width, None
