--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -3,19 +3,19 @@ ShowcaseScreen:
 
     fullscreen: True
 
-    #BoxLayout:
-    #    size_hint_y: None
-    #    height: '48dp'
-    #
-    #    ToggleButton:
-    #       id: tbh
-    #       text: 'Horizontal'
-    #      group: 'accordion'
-    #     state: 'down'
+    BoxLayout:
+        size_hint_y: None
+        height: '48dp'
 
-    #   ToggleButton:
-    #       text: 'Vertical'
-    #       group: 'accordion'
+        #ToggleButton:
+        #    id: tbh
+        #    text: 'Horizontal'
+        #   group: 'accordion'
+        #   state: 'down'
+
+        #ToggleButton:
+        #   text: 'Vertical'
+        #   group: 'accordion'
 
     Accordion:
 
