--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -7,15 +7,15 @@ ShowcaseScreen:
         size_hint_y: None
         height: '48dp'
 
-        #ToggleButton:
-        #    id: tbh
-        #    text: 'Horizontal'
-        #   group: 'accordion'
-        #   state: 'down'
+        ToggleButton:
+            id: tbh
+            text: 'Horizontal'
+            group: 'accordion'
+            state: 'down'
 
-        #ToggleButton:
-        #   text: 'Vertical'
-        #   group: 'accordion'
+        ToggleButton:
+            text: 'Vertical'
+            group: 'accordion'
 
     Accordion:
 
