--- a/data/screens/popups.kv
+++ b/data/screens/popups.kv
@@ -6,7 +6,7 @@ ShowcaseScreen:
         id: bl
         Popup:
             id: popup
-            title: "Hello World"
+            title: "Controlar"
             on_parent:
                 if self.parent == bl: self.parent.remove_widget(self)
             Button:
