--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -35,7 +35,23 @@ ShowcaseScreen:
 
         AccordionItem:
             title: 'Video'
-            Video:
-                source:'ctrl_video2.mp4'
-                state:'play'
-                options:{'eos': 'loop'}
+            VideoPlayer:
+                id: video
+                source: 'sample.mp4'
+                size_hint: 1, 0.9
+
+            BoxLayout:
+                orientation: 'horizontal'
+                size_hint: 1, 0.1
+
+                Button:
+                    text: 'Play'
+                    on_release: app.play()
+
+                Button:
+                    text: 'Pause'
+                    on_release: app.pause()
+
+                Button:
+                    text: 'Stop'
+                    on_release: app.stop()
