--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -37,7 +37,7 @@ ShowcaseScreen:
             title: 'Video'
             VideoPlayer:
                 id: video
-                source: 'sample.mp4'
+                source: 'ctrl_video2.mp4'
                 size_hint: 1, 0.9
 
             BoxLayout:
