--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -38,4 +38,5 @@ ShowcaseScreen:
             VideoPlayer:
                 id: video
                 source: 'ctrl_video2.mp4'
-
+                state:'play'
+                options:{'eos': 'loop'}
