--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -39,3 +39,7 @@ ShowcaseScreen:
                 id: video
                 source: 'ctrl_video2.mp4'
                 size_hint: 1, 0.9
+
+            BoxLayout:
+                orientation: 'horizontal'
+                size_hint: 1, 0.1
