--- a/data/screens/accordions.kv
+++ b/data/screens/accordions.kv
@@ -23,9 +23,9 @@ ShowcaseScreen:
 
         AccordionItem:
             title: 'Musicas'
-            Label:
-                text: 'This is a label fit to the content view'
-                text_size: self.width, None
+            VideoPlayer:
+                id: video
+                source: 'sound.mp4'
 
         AccordionItem:
             title: 'Radio'
